--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 							</li>
 							<li class="slider__desc-item">
 								<a href="#" class="slider__desc-link">
-									<img src="img/001-google-plus-circular-button.svg" alt="" class="slider__desc-img">
+									<img src="img/001-google-plus-circular-button.svg" alt="button.svg" class="slider__desc-img">
 								</a>
 							</li>
 							<li class="slider__desc-item">
@@ -58,7 +58,10 @@
 								</a>
 							</li>
 						</ul>
-						<p class="slider__desc-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis cursus dui sit amet ligula efficitur, sit amet lacinia massa dictum. Etiam accumsan felis a nunc facilisis, ut euismod lacus placerat. Praesent rutrum eget massa a convallis. Nam vitae augue malesuada, accumsan mauris ut, consectetur.</p>
+						<p class="slider__desc-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis cursus dui sit amet ligula efficitur, sit amet lacinia massa dictum. Etiam accumsan felis a nunc facilisis, ut euismod lacus placerat. Praesent rutrum eget massa a convallis. Nam vitae augue malesuada, accumsan mauris ut, consectetur. <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur, quidem recusandae numquam. Sint excepturi dolores itaque odio voluptatem debitis, architecto natus magnam fugiat quam quasi delectus impedit non, commodi in.</span>
+						<span>Natus optio quasi voluptas magni provident voluptate vitae id, explicabo repellendus vero? Earum enim error aut veniam dignissimos vero voluptatem voluptatibus quibusdam labore natus debitis nemo quis in, dolores ex.</span>
+						<span>Modi inventore unde commodi pariatur vero in sit eveniet dolore error, perspiciatis, animi a deserunt repellat nemo est temporibus impedit debitis ullam cumque. Ducimus sequi aliquam molestiae, hic iure dolorem.</span>
+						<span>Obcaecati porro atque earum, nemo aliquam tempora, ut repellat sunt optio eligendi unde cupiditate molestiae ab excepturi nobis iure! Odio consectetur nulla non quidem modi quos maxime dolorem, numquam nobis.</span> </p>
 						<a href="#" class="slider__desc-btn">view profil</a>
 					</div>
 				</div>
